attempt to fix avatar sizing on mobile

--- a/style.css
+++ b/style.css
@@ -7,12 +7,6 @@ html{
     font-size: 1.4vh;
 }
 
-@media screen and (max-device-aspect-ratio: 1/1) {
-    p{
-        font-size: 2.4vh;
-    }
-}
-
 body{
     width: 100%;
     font-family: 'Titillium Web', sans-serif;
@@ -466,4 +460,15 @@ li{
         text-align: center;
     }
 
+}
+
+@media screen and (max-device-aspect-ratio: 1/1) {
+    p{
+        font-size: 2.4vh;
+    }
+
+    .avatar{
+      height: 500px;
+      width: 500px;
+    }
 }
